<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:padding="16dp"
    android:background="@color/colorBackground">

    <!-- Judul -->
    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_weather"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <!-- CardView untuk input dan tombol -->
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:elevation="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Input untuk nama kota -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_city_name"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Tombol untuk mengambil data cuaca -->
            <Button
                android:id="@+id/fetch_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_weather_prediction"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorPrimary"
                android:padding="12dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/city_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Menampilkan data cuaca -->
            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/fetch_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Menampilkan hasil prediksi cuaca -->
            <TextView
                android:id="@+id/prediction_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_prediction"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/result_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
